--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "angular-ui-router": "~0.2.18",
     "font-awesome": "~4.5.0",
     "angular-material": "~1.0.5",
-    "angular-socket-io": "~0.7.0"
+    "angular-socket-io": "~0.7.0",
+    "ngSticky": "~1.8.7"
   }
 }
