--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "async": "^1.5.2",
+    "aws-sdk": "^2.2.41",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "file-type": "^3.8.0",
+    "knox": "^0.9.2",
     "method-override": "^2.3.5",
     "mongoose": "^4.4.5",
     "node-sass-middleware": "^0.9.7",
-    "socket.io": "^1.4.5"
+    "socket.io": "^1.4.5",
+    "socketio-file-upload": "^0.4.6"
   }
 }
