--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,8 @@
     "angular-moment": "~0.10.3",
     "moment": "~2.11.2",
     "ng-file-upload": "~12.0.1",
-    "angular-base64": "~2.0.5"
+    "angular-base64": "~2.0.5",
+    "photoswipe": "~4.1.1",
+    "ng-photoswipe": "~0.0.9"
   }
 }
